--- a/manifest.json
+++ b/manifest.json
@@ -15,8 +15,7 @@
     "content_scripts": [
       {
         "matches": ["<all_urls>"],
-        "js": ["contentScript.js"],
-        "css": ["styles.css"]
+        "js": ["contentScript.js"]
       }
     ]
   }
