filter results on google scholar to only show button for preprints

--- a/manifest.json
+++ b/manifest.json
@@ -9,14 +9,22 @@
         "128": "images/sciety-logo-128.png"
     },
     "permissions": ["storage", "activeTab", "scripting"],
+    "host_permissions": [
+      "https://sciety.org/*"
+    ],
     "action": {
       "default_popup": "popup.html"
     },
+    "background": {
+      "service_worker": "background.js"
+    },
     "content_scripts": [
       {
-        "matches": ["<all_urls>"],
+        "matches": [
+          "https://scholar.google.com/*",
+          "https://www.biorxiv.org/*"
+        ],
         "js": ["contentScript.js"]
       }
     ]
-  }
-  
+}
